[package]
name = "tknetwork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tknetwork"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.92"

[build-dependencies]
regex = "*"
